--- a/AnnZone-Android/app/src/main/res/values/strings.xml
+++ b/AnnZone-Android/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="powered_by">Powered by Anline.cn</string>
 </resources>
