基本界面规

--- a/AnnZone-Android/app/src/main/res/values-zh/strings.xml
+++ b/AnnZone-Android/app/src/main/res/values-zh/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">安浪时空</string>
     <string name="hello_blank_fragment">空白组件化页面</string>
     <string name="powered_by">安浪®提供技术支持</string>
+    <string name="keywords">输入关键字搜索</string>
 </resources>
