--- a/AnnZone-Android/app/src/main/res/values/strings.xml
+++ b/AnnZone-Android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="powered_by">Powered by Anline.cn</string>
+    <string name="search_hint">Keywords</string>
 </resources>
